sjengida/g1/setup_attackers
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_attackers/src/see.c:512:21: error: use of undeclared identifier 'rook_o_2'
v3 = ( const char *)rook_o_2; 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_attackers/src/see.c:576:7: error: use of undeclared identifier 'bishop_o_1'
v18 = bishop_o_1[v4]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_attackers/src/see.c:657:7: error: use of undeclared identifier 'knight_o_0'
v16 = knight_o_0; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_attackers/src/see.c:676:16: error: use of undeclared identifier 'bishop_o_1'
while ( v16 != bishop_o_1 ); 
               ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/setup_attackers/src/obj/see.o] Error 1
